# gdrivefs-rust

./: .gitignore  Cargo.toml  README.md  cached_size.sh
migrations/2020-06-18-184450_create_filesystem/: down.sql  up.sql
migrations/2020-06-18-185845_insert_default_data/: down.sql  up.sql
migrations/2020-07-25-202655_add_size_column/: down.sql  up.sql
migrations/2020-12-30-172404_add_indexes/: down.sql  up.sql
migrations/2021-01-15-220249_create_state_table/: down.sql  up.sql
migrations/2021-01-23-172932_create_cache_table/: down.sql  up.sql
migrations/2021-03-10-140807_add_dirty_column_to_cache/: up.sql
src/: cache.rs  config.rs  drive_client.rs  filesystem.rs  indexing.rs  main.rs  old_cache.rs  test.rs
src/database/: connection.rs  entity.rs  filesystem.rs  index_state.rs  mod.rs  objectcachemeta.rs  objectchunk.rs  schema.rs
