[package]
name = "gdrive-rs"
version = "0.1.0"
authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["json"] }
yup-oauth2 = "4.1.2"
config = "0.10.1"
tokio = { version = "0.2.21", features = ["full"] }
lazy_static = "1.4.0"
hyper = "0.13.6"
hyper-rustls = "0.20.0"
chrono = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
futures = "0.3.5"
libc = "0.2.73"
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "1", features = ["sqlite"] }
fuse = { git = "https://github.com/zargony/fuse-rs/", branch = "master" }
bytes = "0.5.6"
async-scoped = "0.4.1"
