[package]
name = "gdrive-rs"
version = "0.1.0"
authors = ["Niklas Schöllhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
yup-oauth2 = "5.0.1"
dirs = "3.0.1"
tokio = { version = "1.0.1", features = ["full"] }
lazy_static = "1.4.0"
hyper = "0.14.2"
hyper-rustls = "0.22.1"
chrono = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
futures = "0.3.5"
libc = "0.2.73"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["sqlite"] }
diesel_migrations = "1.4.0"
fuse = { path = "../fuse-rs" }
bytes = "1.0.0"
log = "0.4"
simple_logger = "1.11.0"
confy = "0.4.0"
users = "0.11.0"
sha2 = "0.9.3"
hex = "0.4.2"
ring = "0.16.20"
